# shctx

./: .gitignore  .myrc  .releaserc  README.md  config.example.yaml  config.yaml  context.sh  go.mod  go.sum  main.py  pyproject.toml  semver.yml  shctx.cue
.github/workflows/: ci.yaml
cmd/: main.go  mainv2.go
src/shctx/: .bashrc  __init__.py  cli.py  config.py  context.py  context_exit.sh  contexts.py  main.py  plugins.py
tests/: test_shctx.py
