[tool.poetry]
name = "shctx"
version = "0.1.0"
description = "A context manager for your shell"
authors = ["Paul Laffitte <plaffitt@gmail.com>"]
keywords = ["shell", "context", "tool", "cli"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/paullaffitte/shctx"
repository = "https://github.com/paullaffitte/shctx"
include = [
    "LICENSE",
]

[tool.poetry.scripts]
shctx = "shctx.main:main"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
